<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiredUp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_message">Welcome to WiredUp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="user_photo">User Photo</string>
    <string name="icon_delete_button">Delete Button</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="send">Send</string>
    <string name="delete_connection_button">Delete Connection</string>
    <string name="reply">Reply</string>
    
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_add">Add</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_pick_picture_from_galery">Pick From Galery</string>
    <string name="btn_take_picture_from_camera">Take From Camera</string>
    <string name="btn_send_message">Send Message</string>
    <string name="btn_send_connection_request">Send Connection Request</string>
    <string name="btn_see_certificate">See Certificate</string>
    <string name="btn_see_project">See Project</string>
    <string name="btn_create_post">Create Post</string>
    
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_skill">Skill</string>
    <string name="hint_certificate_name">Certificate Name</string>
    <string name="hint_certificate_url">Url (optional)</string>
    <string name="hint_country">Country</string>
    <string name="hint_about_me">About Me</string>
    <string name="hint_languages">Languages</string>
    <string name="hint_search">Search users</string>
    <string name="hint_message_content">Content</string>
    <string name="hint_project_name">Project Name</string>
    <string name="hint_project_description">Description (optional)</string>
    <string name="hint_project_url">Url (optional)</string>
    <string name="hint_post_content">Post Content</string>
    
    <string name="fragment_register">FragmentRegister</string>
    <string name="fragment_login">FragmentLogin</string>
    <string name="fragment_add_skill">FragmentAddSkill</string>
    <string name="fragment_send_message">FragmentSendMessage</string>
    
    <string name="header_skills">Skills</string>
    <string name="header_certificates">Certificates</string>
    
    <string name="title_new_message">New Message</string>
    <string name="title_add_new_skill">Add New Skill</string>
    <string name="title_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_connection_requests">Connection requests</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_certificate_details">Certificate Details</string>
    <string name="title_activity_connection_requests">Connection Requests</string>
    <string name="title_activity_message_details">Message Details</string>
    <string name="title_activity_project_details">Project Details</string>
    <string name="title_activity_user_post_details">Post Details</string>

</resources>