<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wiredup.activities.MainActivity" >

    <TextView
        android:id="@+id/textView_welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_message"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_showLoginDialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_welcomeMessage"
        android:layout_below="@+id/textView_welcomeMessage"
        android:text="@string/login"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_showRegisterDialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_showLoginDialog"
        android:layout_below="@+id/btn_showLoginDialog"
        android:text="@string/register"
        android:textSize="25sp" />

</RelativeLayout>